<resources>
    <string name="app_name">雅鲁翻译通</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="exite_dialog">再按一次退出程序！</string>
    <string name="settings">设置</string>
    <string name="choice_language_title">请选择习惯语言</string>
    <string name="tackphoto">拍照</string>
    <string name="imagelist">本地相册</string>
    <string name="dialog_message">是否退出登录？</string>
    <string name="getcode_code_startcode">S后重新获取</string>
    <string name="choice_language_choicebottom_title">翻译通</string>
    <string name="choice_language_choicetext">请选择习惯语言</string>
    <string name="choice_language_choicebottom_text">© 翻译通</string>
    <string name="returntext">返回</string>
    <string name="update_seccese">修改成功</string>
    <string name="nomessage">暂时没有内容哦</string>
    <string name="net_error">糟糕，加载失败</string>
    <string name="getmessage_agin">重新加载</string>
    <string name="translate_boottom">词典</string>
    <string name="message_boottom">翻译</string>
    <string name="user_boottom">我的</string>
    <string name="login_text_titlename">登录</string>
    <string name="login_title">欢迎使用翻译通</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_code">请输入验证码</string>
    <string name="login_but_getcode">获取验证码</string>
    <string name="login_but_login">确认登录</string>
    <string name="login_text_otherlogin">第三方账号快捷登录</string>
    <string name="login_error_notphonenumber">请输入手机号</string>
    <string name="login_error_isnotphone">请输入正确的手机号</string>
    <string name="login_error_notcode">请输入验证码</string>
    <string name="login_text_bottom">《用户使用服务协议》</string>
    <string name="bindphone_text_title">请绑定您的手机号码</string>
    <string name="bindphone_text_titlename">绑定手机</string>
    <string name="bindphone_but_confirm">确定绑定</string>
    <string name="user_agreementment_text_tiltlemessage">用户使用服务协议</string>
    <string name="user_agreementment_text_tiltlemessage1">公告详情</string>
    <string name="translate_text_chinese">汉语</string>
    <string name="translate_text_zangwen">藏语</string>
    <string name="translate_text_zanghan">藏汉</string>
    <string name="translate_text_translate">在此输入您要查询的单词</string>
    <string name="translate_text_translate1">在此输入你要翻译的句子</string>
    <string name="translate_text_netmessage">网络释义</string>
    <string-array name="translate_choiceimage1">
        <item>简体中文</item>
        <item>英语</item>
        <item>藏语</item>
        <item>维吾尔文</item>
        <item>蒙语</item>
        <item>繁体中文</item>
        <item>日文</item>
        <item>法文</item>
        <item>西班牙文</item>
        <item>葡萄牙文</item>
        <item>德文</item>
        <item>意大利文</item>
        <item>俄文</item>
        <item>印尼文</item>
        <item>马来文</item>
        <item>越南文</item>


        <item>南非荷兰语</item>
        <item>阿姆哈拉语</item>
        <item>阿拉伯语</item>
        <item>阿塞拜疆语</item>
        <item>巴什基尔语</item>
        <item>白俄罗斯语</item>
        <item>保加利亚语</item>


        <item>孟加拉语</item>
        <item>波斯尼亚语</item>
        <item>加泰罗尼亚语</item>
        <item>宿务语</item>
        <item>科西嘉语</item>
        <item>捷克语</item>
        <item>威尔士语</item>


        <item>丹麦语</item>
        <item>希腊语</item>
        <item>世界语</item>
        <item>爱沙尼亚语</item>
        <item>巴斯克语</item>
        <item>波斯语</item>
        <item>芬兰语</item>


        <item>菲律宾语</item>
        <item>斐济语</item>
        <item>弗里西语</item>
        <item>爱尔兰语</item>
        <item>苏格兰盖尔语</item>
        <item>加利西亚</item>
        <item>古吉拉特语</item>


        <item>豪萨语</item>
        <item>夏威夷语</item>
        <item>希伯来语</item>
        <item>印地语</item>
        <item>克罗地亚语</item>
        <item>海地克里奥尔语</item>
        <item>匈牙利语</item>


        <item>亚美尼亚语</item>
        <item>伊博语</item>
        <item>冰岛语</item>
        <item>印尼爪哇语</item>
        <item>格鲁吉亚语</item>
        <item>哈萨克语</item>
        <item>哈萨克语（西里尔）</item>


        <item>高棉语</item>
        <item>卡纳达语</item>
        <item>韩语</item>
        <item>库尔德语</item>
        <item>吉尔吉斯语</item>
        <item>拉丁语</item>
        <item>卢森堡语</item>


        <item>老挝语</item>
        <item>立陶宛语</item>
        <item>拉脱维亚语</item>
        <item>马尔加什语</item>
        <item>马里语</item>
        <item>毛利语</item>
        <item>马其顿语</item>


        <item>马拉雅拉姆语</item>
        <item>蒙古语(西里尔)</item>
        <item>马拉地语</item>
        <item>山地马里语</item>
        <item>马耳他语</item>
        <item>白苗文</item>
        <item>缅甸语</item>



        <item>尼泊尔语</item>
        <item>荷兰语</item>
        <item>挪威语</item>
        <item>齐切瓦语</item>
        <item>克雷塔罗奥托米语</item>
        <item>旁遮普语</item>
        <item>帕皮阿门托语</item>


        <item>波兰语</item>
        <item>普什图语</item>
        <item>罗马尼亚语</item>
        <item>信德语</item>
        <item>僧伽罗语</item>
        <item>斯洛伐克语</item>
        <item>斯洛文尼亚语</item>


        <item>萨摩亚语</item>
        <item>修纳语</item>
        <item>索马里语</item>
        <item>阿尔巴尼亚语</item>
        <item>塞尔维亚语</item>
        <item>塞索托语</item>
        <item>印尼巽他语</item>


        <item>瑞典语</item>
        <item>斯瓦希里语</item>
        <item>泰米尔语</item>
        <item>泰卢固语</item>
        <item>塔吉克语</item>
        <item>泰语</item>
        <item>汤加语</item>


        <item>土耳其语</item>
        <item>鞑靼语</item>
        <item>塔希提语</item>
        <item>乌德穆尔特语</item>
        <item>乌克兰语</item>
        <item>乌尔都语</item>
        <item>乌兹别克语</item>


        <item>南非科萨语</item>
        <item>意第绪语</item>
        <item>约鲁巴语</item>
        <item>尤卡坦玛雅语</item>
        <item>粤语</item>
        <item>南非祖鲁语</item>

    </string-array>
    <string name="userinfo_text_titlename">个人中心</string>
    <string name="userinfo_text_vipcenter">会员中心</string>
    <string name="userinfo_text_myfile">我的收藏</string>
    <string name="userinfo_text_mycoupon">我的优惠券</string>
    <string name="userinfo_text_offlinedata">离线数据</string>
    <string name="userinfo_text_noticedata">通知公告</string>
    <string name="userinfo_text_helpcenter">帮助中心</string>
    <string name="userinfo_text_feedback">意见反馈</string>
    <string name="userinfo_text_seting">设置</string>
    <string name="userinfo_text_noadd">未添加</string>
    <string name="userinfo_text_nobading">未绑定</string>
    <string name="userinfo_text_bading">已绑定</string>
    <string name="translate_text_quxiao">取消</string>
    <string name="translate_text_dialog">VIP免广告</string>
    <string name="translate_text_tsvip">该词典仅限VIP会员专享</string>
    <string name="translate_text_qued">确定</string>
    <string name="translate_text_becomevip">立即成为VIP</string>
    <string name="translate_text_nodata">没有找到结果</string>
    <string name="translate_text_feedback">我要反馈</string>
    <string name="translate_text_popletranslate">人工翻译</string>
    <string name="translate_text_uploaderreo">我要报错</string>
    <string name="noticedetail_text_lookuser">阅读</string>
    <string name="noticedetail_text_titlename">资讯详情</string>
    <string name="noticedatail_text_iszan">您已经赞过了</string>
    <string name="myuserinfo_text_titlename">我的资料</string>
    <string name="myuserinfo_text_headimage">头像</string>
    <string name="myuserinfo_text_username">用户名</string>
    <string name="myuserinfo_text_sex">性别</string>
    <string name="myuserinfo_text_educiton">学历</string>
    <string name="myuserinfo_text_age">年龄</string>
    <string name="myuserinfo_btn_save">保存</string>
    <string name="myuserinfo_text_man">男</string>
    <string name="myuserinfo_text_wuman">女</string>
    <string name="membercenter_text_title">会员中心</string>
    <string name="membercenter_text_choicetc">选择套餐</string>
    <string name="membercenter_text_openvip">开通</string>
    <string name="membercenter_text_day">天</string>
    <string name="membercenter_text_botvip">你还不是会员</string>
    <string name="membercenter_text_year">年</string>
    <string name="membercenter_text_month">月</string>
    <string name="membercenter_text_vipmessage">会员权益：这是一段会员权益的介绍，这是一段会员权益的介绍，这是一段会员权益的介绍，这是一段会员权益的介绍，这是一段会员权益的介绍，这是一段会员权益的介绍。</string>
    <string name="membercenter_text_vipzx">会员专享</string>
    <string name="membercenter_text_vipcenter">翻译通会员中心</string>
    <string name="membercenter_text_hzcd">新华汉藏词典</string>
    <string name="membercenter_text_njcd">牛津藏英词典</string>
    <string name="membercenter_text_xlcd">小林藏梵词典</string>
    <string name="membercenter_text_endtime">到期时间:</string>
    <string name="translate_text_tis">没有找到结果，您可以切换vip服务试试</string>
    <string name="membercenter_text_cjgg">纯净广告</string>
    <string name="membercenter_text_hylxxz">词典离线下载</string>
    <string name="membercenter_text_zxhybs">尊享会员标识</string>
    <string name="membercenter_text_hyxy">《会员使用服务协议》</string>
    <string name="mycollection_text_titlename">我的收藏</string>
    <string name="mycoupon_text_titlename">我的优惠券</string>
    <string name="mycoupon_text_getcoupon">领取优惠券</string>
    <string-array name="mycoupontitle">
        <item>未使用</item>
        <item>已使用</item>
        <item>已过期</item>
    </string-array>
    <string name="getcoupon_text_titlename">领券中心</string>
    <string name="getcoupon_text_tj">使用条件：满%可用</string>
    <string name="getcoupon_text_rq">截至日期：</string>
    <string name="getcoupon_text_get">领取</string>
    <string name="getcoupon_text_getover">已领取</string>
    <string name="offlin_text_titlename">离线数据</string>
    <string name="offlin_text_ts">下载离线数据包，可使您可以在没有网络或网络较差的环境下正常使用翻译功能。</string>
    <string name="offlin_xiaz">立即下载</string>
    <string name="offlin_dialog_title">提示</string>
    <string name="offlin_dialog_text">该词典仅会员可下载，是否开通会员？</string>
    <string name="offlin_textyxz">已下载</string>
    <string name="notice_text_titlename">通知公告</string>
    <string name="notice_text_nomore">没有更多了</string>
    <string name="feedback_text_titlename">意见反馈</string>
    <string name="feedback_text_inputts">问题和意见</string>
    <string name="feedback_text_inputhint">请详细描述您的问题，以便我们提供更好的服务</string>
    <string name="feedback_text_addimage">图片(选填)</string>
    <string name="feedback_btn_tij">提交</string>
    <string name="seting_text_titlename">设置</string>
    <string name="seting_text_choicelanguage">系统语言切换</string>
    <string name="seting_text_fy">跨软件翻译</string>
    <string name="seting_text_userandself">账号安全</string>
    <string name="seting_text_aboutus">关于我们</string>
    <string name="seting_text_outlogin">退出登录</string>
    <string name="safecenter_text_titlename">安全中心</string>
    <string name="safecenter_text_phonenum">手机号码</string>
    <string name="safecenter_text_bandingwechart">绑定微信</string>
    <string name="safecenter_text_bandingqq">绑定QQ</string>
    <string name="safecenter_text_bangding">已绑定</string>
    <string name="safecenter_text_notbangding">未绑定</string>
    <string name="aboutus_text_titlename">关于我们</string>
    <string name="aboutus_text_content">藏语翻译宝是为满足日益广泛的藏语和其他语言的沟通需求，开发的一款可进行藏汉、藏英、藏梵等的翻译APP，深受广大藏族同胞、各国藏语爱好者、入藏旅游人士的欢迎。</string>
    <string name="aboutus_text_phone">咨询电话 </string>
    <string name="aboutus_text_email">联系邮箱 </string>
    <string name="aboutus_text_messageinfo">版权所有 © 翻译通</string>
    <string name="aboutus_text_xieyi">《用户使用服务协议》</string>
    <string name="replacephone_text_titlename">更换手机</string>
    <string name="replacephone_text_oldphone">请输入您注册用的手机号码</string>
    <string name="replacephone_text_newphone">请输入您的新手机号码</string>
    <string name="replacephone_text_code">请输入验证码</string>
    <string name="replacephone_text_uploaddata">提交</string>
    <string-array name="main_translate">
        <item>藏汉</item>
        <item>汉藏</item>
        <item>藏英</item>
        <item>英藏</item>
        <item>藏藏</item>
        <item>藏梵</item>
        <item>汉汉</item>
    </string-array>
    <string name="helpcenter_text_titlename">帮助中心</string>
    <string name="pople_translate_text_titlenam">人工翻译</string>
    <string name="payfor_sessces_titlename">支付成功</string>
    <string name="payfor_sessces_hyyouxq">会员有效期</string>
    <string name="payfor_sessces_ljty">立即体验</string>
</resources>