<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/c_f5f5f5">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

    <ImageView
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_45"
        android:src="@mipmap/paysessce"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/c_e94950"
        android:text="@string/payfor_sessces_titlename"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_ff333333"
        android:text="@string/payfor_sessces_hyyouxq"
        android:layout_marginTop="@dimen/dp_57"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_15"
        android:textColor="@color/c_ff333333"/>
    
    <Button
        android:id="@+id/tiyan"
        android:layout_width="@dimen/dp_280"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/payfor_sess_btn"
        android:textSize="@dimen/sp_16"
        android:text="@string/payfor_sessces_ljty"
        android:textColor="@color/c_ffffff"/>
    </LinearLayout>
</LinearLayout>
