<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    android:gravity="center"
    android:orientation="vertical">
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical">-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dip"
                    android:layout_height="72dip"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/logo"/>
                <EditText
                    android:id="@+id/login_inputeditext_phone"
                    android:layout_width="280dip"
                    android:layout_height="40dip"
                    android:layout_marginTop="62dip"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/login_hint_phone"
                    android:padding="@dimen/dp_10"
                    android:inputType="number"
                    android:textColor="@color/c_383838"
                    android:textColorHint="@color/c_a6a6a6"
                    android:textSize="@dimen/sp_12"
                    android:background="@drawable/login_input_back"/>


                <LinearLayout

                    android:layout_width="280dip"
                    android:layout_height="40dip"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dp_10"
                    android:background="@drawable/login_input_back"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_inoputeditext_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_hint_code"
                        android:textSize="@dimen/sp_12"

                        android:textColor="@color/c_383838"
                        android:textColorHint="@color/c_a6a6a6"/>


                    <TextView

                        android:id="@+id/login_text_getcode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_but_getcode"
                        android:gravity="center"
                        android:textColor="@color/c_e94950"
                        android:textSize="@dimen/sp_14"/>
                </LinearLayout>




                <Button
                    android:id="@+id/login_button_reture"
                    android:layout_width="@dimen/dp_280"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="50dip"
                    android:background="@drawable/login_but"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_ffffff"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:textSize="@dimen/sp_18"
                    android:text="@string/login_but_login"/>





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:gravity="top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text_otherlogin"
                    android:textSize="@dimen/sp_12"
                    android:layout_marginTop="@dimen/dp_45"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_a6a6a6"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp_20">
                    <ImageView
                        android:id="@+id/login_image_qq"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_marginRight="35dp"
                        android:src="@mipmap/qq"/>

                    <ImageView
                        android:id="@+id/login_image_wechart"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:src="@mipmap/wechat"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/login_text_useragremeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_40"
                    android:textSize="12sp"
                    android:textColor="@color/c_6ca2ff"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_text_bottom"/>

            </LinearLayout>

        <!--</LinearLayout>-->
    <!--</ScrollView>-->


</LinearLayout>
