<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_ffffff">
    <include layout="@layout/layout_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:textSize="@dimen/sp_14"
        android:text="@string/feedback_text_inputts"
        android:textColor="@color/c_a6a6a6"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/c_f5f5f5"
        android:padding="@dimen/dp_15">

        <EditText
            android:id="@+id/input_editext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c_ff333333"
            android:hint="@string/feedback_text_inputhint"
            android:textColorHint="@color/c_a6a6a6"
            android:gravity="top"/>

        <TextView
            android:id="@+id/textszie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c_a6a6a6"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="0/200"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_a6a6a6"
                android:text="@string/feedback_text_addimage"
                />
            <TextView
                android:id="@+id/imagesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/c_a6a6a6"
                android:text="0/4"/>
        </LinearLayout>

        <translatedemo.com.translatedemo.view.MyGridView
            android:id="@+id/mygridview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:background="@color/c_ffffff"
            android:numColumns="4">
            
        </translatedemo.com.translatedemo.view.MyGridView>

    </LinearLayout>
    
    <Button
        android:id="@+id/uplod_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/c_e94950"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:text="@string/feedback_btn_tij"
        android:textColor="@color/c_ffffff"/>

</LinearLayout>
